# ElastiFast

./: .gitignore  Dockerfile  README.md  celerybeat-schedule.db  pyproject.toml
.github/workflows/: docker-build-push.yml
deploy/: 02-redis.yaml  03-fastapi.yaml  04-celery-worker.yaml  05-celery-beat.yaml  06-flowmon.yaml
deploy/docker-compose/: docker-compose.yaml
deploy/k8s/: 01-namespace.yaml  04-celery-worker.yaml  05-celery-beat.yaml
elastifast/: __init__.py  main.py  pyproject.toml  settings.py
elastifast/app/: __init__.py  main.py
elastifast/config/: __init__.py  logging.py  setting.py  settings.py
elastifast/esclient/: __init__.py
elastifast/models/: apiclient.py  database.py  elasticsearch.py
elastifast/services/: celery_tasks.py
elastifast/tasks/: __init__.py  atlassian.py  ingest_es.py  jira.py  jiralogs.py  monitor.py  postman.py  setup_es.py  zendesk.py
elastifast/utils/: __init__.py
