[tool.poetry]
name = "elastifast"
version = "0.1.0"
description = ""
authors = ["nachiket vartak <nachiket.vartak@elastic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = {extras = ["async"], version = "^8.15.0"}
fastapi = "^0.112.1"
celery = {extras = ["sqs"], version = "^5.4.0"}
elastic-apm = "^6.23.0"
ecs-logging = "^2.2.0"
pydantic-settings = "^2.5.2"
uvicorn = "^0.31.0"
redis = "^5.1.1"
flower = "^2.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
bandit = "^1.7.9"
mypy = "^1.11.1"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.1.1"
flake8-docstrings = "^1.7.0"
pylint = "^3.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
